WikiController & WikiDescriptor (#299)
* BOM and parent migration

* WikiController

* celements-wiki-api

* reduce CreateNewWiki page

* revert ObjectEditorTest

* fix expectClass

* remove celements-wiki-manager from filebase

* remove celements-wiki-api provided

* remove celements-wiki-api provided

* remove celements-wiki-manager from filebase

* fix init issues